fixed bug with uploading image after going back to landing page dissapearing and being overwritten by audio image. fixed alignment of text on buttons. Set minimum resolution to 2400 based on spotify requirements and adjusted scaling accordingly

--- a/src/components/Dropdowns/Dropdowns.css
+++ b/src/components/Dropdowns/Dropdowns.css
@@ -4,7 +4,7 @@
     flex-shrink: 0;
     border-radius: 0.9375rem;
     background: #FFFFFA;
-    padding: 0.6rem;
+    padding: 0.5rem 0.8rem 0.8rem 0.8rem;
     overflow: visible;
     transition: height 0.3s ease;
     margin-bottom: 0.9rem;
@@ -41,10 +41,10 @@
 } */
 
 .drop-down-content > * {
-    margin-top: 15px;
+    margin-top: 7px;
 }
 
 .drop-down-content {
     overflow: visible;
-    padding-bottom: 15px;
+    padding-bottom: 7px;
 }
